# zhuiwen-ai

./: .env.example  .gitignore  README.md  SPEC.md  compose.yaml  conftest.py  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/workers/: main.py
data/rules_kb/: README.md  amazon_pw_rules.jsonl  amazon_rules.jsonl  mercadolibre_pw_rules.jsonl  mercadolibre_rules.jsonl  ozon_pw_rules.jsonl  ozon_rules.jsonl  ozon_rules.process_archive.jsonl  ozon_rules.process_rescue_candidates.jsonl  ozon_web_rules.jsonl  seed_rules.jsonl  shein_pw_rules.jsonl  shein_rules.jsonl  temu_pw_rules.jsonl  (+3 more)
docs/: chat-business-logic.md  chat-redesign-plan.md  sourcing-client-migration.md  规则知识库设计.md
migrations/: 001_rls_setup.sql  env.py
scripts/: db_bootstrap.py  load_rules_kb.py  mock_llm_server.py  ozon_crawler.py  ozon_tampermonkey.user.js  remap_listing_domain.py
tasks/: plan.md  todo.md
tests/: test_auth_http.py  test_chat_converse.py  test_db_isolation.py  test_e2e_http.py  test_embeddings.py  test_gateway_stream.py  test_ingest_scoring.py  test_load_rules_kb.py  test_miaoshou_client.py  test_post_process.py  test_procrastinate_schema.py  test_publish.py  test_queue_e2e.py  test_queue_foundation.py  test_requeue_cron.py  test_rules_kb_migration.py  test_rules_kb_pgvector.py  test_rules_kb_search.py  test_sourcing.py  test_sourcing_batch_columns.py  test_sourcing_ingest.py  test_sourcing_workflow.py  test_stream_guard.py  test_worker_entry.py
tmp/: zhuiwen_web.py
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+67 files in other folders)
