[project]
name = "zhuiwen-ai"
version = "0.1.0"
description = "XBorder AI — 多租户跨境电商 AI 助手（chat / 知识库 / 采集编排）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- Web / API ---
    "fastapi>=0.115", # 带 starlette
    "uvicorn[standard]>=0.30", # ASGI 服务器（uvicorn app.main:app）
    "httpx>=0.27", # LLM 网关 / embeddings HTTP 出口
    # --- DB（多租户 RLS + pgvector）---
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29", # postgresql+asyncpg 驱动
    "greenlet>=3.0", # SQLAlchemy async 依赖
    "pgvector>=0.3",
    # --- 配置 / 鉴权 ---
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8", # import jwt
    # --- Agent 编排 ---
    "langgraph>=0.2",
    # --- 长流程（sourcing 域 CollectWorkflow，计划 §3）---
    "temporalio>=1.6",
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
    "litellm>=1.89.2",
    "procrastinate>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false  # 应用而非库，uv 不构建/不安装自身

[tool.pytest.ini_options]
asyncio_mode = "auto"
